Added social links

--- a/index.html
+++ b/index.html
@@ -70,28 +70,23 @@
 
                 <ul class="socials ">
                     <li>
-                        <a href="#">
-                            <i class="fa fa-facebook fa-lg"></i>
+                        <a href="https://vk.com/zeromvx" target="_blank">
+                            <i class="fa fa-vk" aria-hidden="true"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <i class="fa fa-twitter fa-lg"></i>
+                        <a href="https://github.com/zeromvx" target="_blank">
+                            <i class="fa fa-github" aria-hidden="true"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://www.linkedin.com/in/sergey-karmanov-151950176/" target="_blank">
                             <i class="fa fa-linkedin fa-lg"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href=https://www.instagram.com/sergey_karmanov___/" target="_blank">
                             <i class="fa fa-instagram fa-lg"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="fa fa-pinterest fa-lg"></i>
                         </a>
                     </li>
                 </ul>
@@ -319,7 +314,7 @@
 
                         <div class="image-wrap">
                             <p class="work__image-descr">
-                                This is simple to-do list. You can see, create, remove tasks. Data store into LocaleStorage.
+                                This is simple to-do list. You can see, create, remove tasks. The data is stored into local storage.
                                 If you complete the task, click on ready button, and if you reload page, deleted task won`t exist.
                             </p>
                             <img src="img/todo.jpg" alt="" class="work__image">
