changed social links

--- a/index.html
+++ b/index.html
@@ -69,24 +69,24 @@
                 <p class="home__desc ">I`m Frontend Developer</p>
 
                 <ul class="socials ">
-                    <li>
-                        <a href="https://vk.com/zeromvx" target="_blank">
-                            <i class="fa fa-vk" aria-hidden="true"></i>
+                    <li class="socials__item">
+                        <a href="https://vk.com/zeromvx" target="_blank" class="socials__link">
+                            <i class="fa fa-vk socials__icon" aria-hidden="true"></i>
                         </a>
                     </li>
-                    <li>
-                        <a href="https://github.com/zeromvx" target="_blank">
-                            <i class="fa fa-github" aria-hidden="true"></i>
+                    <li class="socials__item">
+                        <a href="https://github.com/zeromvx" target="_blank" class="socials__link">
+                            <i class="fa fa-github-alt socials__icon" aria-hidden="true"></i>
                         </a>
                     </li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/sergey-karmanov-151950176/" target="_blank">
-                            <i class="fa fa-linkedin fa-lg"></i>
+                    <li class="socials__item">
+                        <a href="https://www.linkedin.com/in/sergey-karmanov-151950176/" target="_blank" class="socials__link">
+                            <i class="fa fa-linkedin fa-lg socials__icon"></i>
                         </a>
                     </li>
-                    <li>
-                        <a href=https://www.instagram.com/sergey_karmanov___/" target="_blank">
-                            <i class="fa fa-instagram fa-lg"></i>
+                    <li class="socials__item">
+                        <a href=https://www.instagram.com/sergey_karmanov___/" target="_blank" class="socials__link">
+                            <i class="fa fa-instagram fa-lg socials__icon"></i>
                         </a>
                     </li>
                 </ul>
