Added health site

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                                 <i class="fa fa-github" aria-hidden="true"></i>
                                 Github
                             </a>
-                            <a href="sites/webapp/index.html" target="_blank">Wep app</a>
+                            <a href="sites/webapp/" target="_blank">Wep app</a>
                         </figcaption>
                     </figure>
                 </li>
@@ -267,20 +267,20 @@
 
                         <div class="image-wrap">
 
-                            <p class="work__image-descr">This is responsive landing which I made for train my skills, using Sass,
-                                Gulp.You can see code of this project in my github.
+                            <p class="work__image-descr">This is responsive landing which I made for train my skills, using Sass.
+                                You can see code of this project in my github.
                             </p>
 
-                            <img src="img/webapp.jpg" alt="" class="work__image">
+                            <img src="img/health.jpg" alt="" class="work__image">
                         </div>
 
                         <figcaption class="work__descr">
 
-                            <a href="https://github.com/zeromvx/landing" target="_blank" class="work__github">
+                            <a href="https://github.com/zeromvx/health-medical" target="_blank" class="work__github">
                                 <i class="fa fa-github" aria-hidden="true"></i>
                                 Github
                             </a>
-                            <a href="sites/webapp/index.html" target="_blank">Wep app</a>
+                            <a href="sites/health/" target="_blank">Health medical</a>
                         </figcaption>
                     </figure>
                 </li>
@@ -304,7 +304,7 @@
                                 Github
                             </a>
 
-                            <a href="sites/iosiflee/index.html" target="_blank">Landing Iosif Lee</a>
+                            <a href="sites/iosiflee/" target="_blank">Landing Iosif Lee</a>
                         </figcaption>
                     </figure>
                 </li>
@@ -326,7 +326,7 @@
                                 Github
                             </a>
 
-                            <a href="sites/todo/index.html" target="_blank">To-Do list</a>
+                            <a href="sites/todo/" target="_blank">To-Do list</a>
                         </figcaption>
                     </figure>
                 </li>
@@ -348,7 +348,7 @@
                                 Github
                             </a>
 
-                            <a href="sites/snake-game/index.html" target="_blank">Snake game</a>
+                            <a href="sites/snake-game/" target="_blank">Snake game</a>
                         </figcaption>
                     </figure>
                 </li>
@@ -369,7 +369,7 @@
                                 <i class="fa fa-github" aria-hidden="true"></i>
                                 Github
                             </a>
-                            <a href="sites/converter/index.html" target="_blank">Currency Converter</a>
+                            <a href="sites/converter/" target="_blank">Currency Converter</a>
                         </figcaption>
                     </figure>
                 </li>
@@ -393,7 +393,7 @@
                                 Github
                             </a>
 
-                            <a href="sites/livesearch/index.html" target="_blank">Live search</a>
+                            <a href="sites/livesearch/" target="_blank">Live search</a>
                         </figcaption>
                     </figure>
                 </li>
