Changed health site

--- a/sites/health/index.html
+++ b/sites/health/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" testimonials-content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Health Medical</title>
     <!-- font-awesome -->
     <script src="https://use.fontawesome.com/7db17c9edf.js"></script>
@@ -62,8 +62,6 @@
             <!-- /.hero -->
 
         </div>
-
-        <div class="shape"></div>
     </header>
     <!-- /.header -->
 
