Changed bug with link

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </a>
                     </li>
                     <li class="socials__item">
-                        <a href=https://www.instagram.com/sergey_karmanov___/" target="_blank" class="socials__link">
+                        <a href="https://www.instagram.com/sergey_karmanov___/" target="_blank" class="socials__link">
                             <i class="fa fa-instagram fa-lg socials__icon"></i>
                         </a>
                     </li>
