Changed promotions site

--- a/index.html
+++ b/index.html
@@ -314,6 +314,28 @@
 
                         <div class="image-wrap">
                             <p class="work__image-descr">
+                                This is decision of js task from github. Web app sends query to server and get json file.
+                                There are two tabs. The first tab shows all promotions. The second tab shows promotions for new users.
+                            </p>
+                            <img src="img/promotions.jpg" alt="" class="work__image">
+                        </div>
+
+                        <figcaption class="work__descr">
+                            <a href="https://github.com/zeromvx/web-technical-test" target="_blank" class="work__github">
+                                <i class="fa fa-github" aria-hidden="true"></i>
+                                Github
+                            </a>
+
+                            <a href="sites/promotions/" target="_blank">Promotions</a>
+                        </figcaption>
+                    </figure>
+                </li>
+
+                <li class="work mix category-b " data-order="2" data-groups='["js"]'>
+                    <figure>
+
+                        <div class="image-wrap">
+                            <p class="work__image-descr">
                                 This is simple to-do list. You can see, create, remove tasks. The data is stored into local storage.
                                 If you complete the task, click on ready button, and if you reload page, deleted task won`t exist.
                             </p>
