changed leadgen site

--- a/sites/leadgen/index.html
+++ b/sites/leadgen/index.html
@@ -516,7 +516,7 @@
             <div class="footer__contact footer__item">
 
                 <h3 class="footer__title">
-                    Quick Links
+                    Contacts
                 </h3>
 
                 <a href="mailto:abc@expample.com">
