added chat site

--- a/index.html
+++ b/index.html
@@ -231,13 +231,37 @@
 
             <div class="portfolio__filter filter-options">
                 <button class="filter__btn active" data-filter="all">All</button>
+                <button class="filter__btn" data-filter="react">React</button>
                 <button class="filter__btn" data-filter="layouts">Layouts</button>
                 <button class="filter__btn" data-filter="js">JS</button>
-                <button class="filter__btn" data-filter="react">React</button>
             </div>
             <!-- /.portfolio__filter -->
 
             <ul class="portfolio__content container my-shuffle">
+
+                <li class="work mix category-a " data-order="3" data-groups='["react"]'>
+                    <figure>
+
+                        <div class="image-wrap">
+
+                            <p class="work__image-descr">This is test task for interview in TOT systems.
+                                It includes frontend part of chat, written using React.
+                            </p>
+
+                            <img src="img/chat.jpg" alt="chat" class="work__image">
+                        </div>
+
+                        <figcaption class="work__descr">
+
+                            <a href="https://github.com/zeromvx/task-for-tot-sys" target="_blank" class="work__github">
+                                <i class="fa fa-github" aria-hidden="true"></i>
+                                Github
+                            </a>
+                            <a href="https://react-frontend-chat.herokuapp.com/" target="_blank">React task</a>
+                        </figcaption>
+                    </figure>
+                </li>
+
 
                 <li class="work mix category-a " data-order="1" data-groups='["layouts"]'>
                     <figure>
