--- a/index.html
+++ b/index.html
@@ -255,10 +255,6 @@
                             </li>
 
                             <li>
-                                <label>Graphic redactors:</label> Figma
-                            </li>
-
-                            <li>
                                 <label>Preprocesors:</label> Sass
                             </li>
 
@@ -271,11 +267,11 @@
                             </li>
 
                             <li>
-                                <label>CSS frameworks:</label> basics of Bootstrap 4 /
+                                <label>CSS frameworks:</label> Bootstrap 4
                             </li>
 
                             <li>
-                                <label>JavaScript libriaries:</label> basics of React
+                                <label>JavaScript libriaries:</label> React + Redux
                             </li>
 
                         </ul>
